[package]
name = "mmo-benchmarker"
version = "0.1.0"
authors = ["Jack Hanley <jack.hanley@redpillvr.com>"]
autobins=false 

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
futures-cpupool = "0.1"
tokio-core = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
futures = "0.1"
bytes = "0.4.10"
byteorder = "1.2.6"
clap = "2.32.0"
time = "0.1"
log = "0.4"
uuid = { version = "0.6.5", features = ["v4","v5"] }
rand = "0.3.15"
env_logger = "0.5.13"

[[bin]]
name = "connect"
path = "src/connect.rs"
