[package]
name = "mmo-server"
version = "0.1.0"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
clap = {version = "2.24",features = ["yaml"]}
futures = "0.1"
tokio-core = "0.1"
byteorder = "1.0.0"
time = "0.1"
log = "0.4"
uuid = { version = "0.6.5", features = ["v4","v5"] }
rand = "0.3.15"
env_logger = "0.5.13"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
staticfile = "*"
iron = "*"
mount="*"

[[bin]]
name = "mmo-server"
path = "src/main.rs"

[[bin]]
name = "old-mmo-server"
path = "src/old.rs"

[[bin]]
name = "static"
path = "src/static.rs"