[package]
name = "mmo-server"
version = "0.1.0"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
clap = "2.24"
futures = "0.1"
tokio="0.1.22"
byteorder = "1.0.0"
time = "0.1"
log = "0.4"
uuid = { version = "0.6.5", features = ["v4","v5"] }
rand = "0.3.15"
env_logger = "0.5.13"
mentat = "0.0.4"
fred = "1.1.0"
bytes = "0.4.12"
    
[[bin]]
name = "mmo-server"
path = "src/main.rs"

[[bin]]
name = "mmo-listener"
path = "src/listener.rs"
