[package]
name = "mmo-server"
version = "0.1.0"
authors = ["Jack Hanley <jack.hanley@redpillvr.com"]
edition = '2018'
[dependencies]
clap = "2.24"
futures = "0.1"
tokio="=0.2.0-alpha.1"
byteorder = "1.0.0"
time = "0.1"
log = "0.4"
uuid = { version = "0.6.5", features = ["v4","v5"] }
rand = "0.3.15"
env_logger = "0.5.13"
mentat = "0.0.4"
fred = "1.1.0"
bytes = "0.4.12"
memcache = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "mmo-server"
path = "src/main.rs"

# [[bin]]
# name = "mmo-listener"
# path = "src/listener.rs"
